Zadaci za samostalan rad/ZSR8/Z8/.gcc.out
/rhome/j/jhasanovic1/workspace/OR/ZSR8/Z8/main.c: In function ‘izbaci_podniz’:
/rhome/j/jhasanovic1/workspace/OR/ZSR8/Z8/main.c:16:13: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
         pom1=q1;
             ^
/rhome/j/jhasanovic1/workspace/OR/ZSR8/Z8/main.c:22:35: error: lvalue required as left operand of assignment
                 while((*pocetak)++=(*pom1)++);
                                   ^
/rhome/j/jhasanovic1/workspace/OR/ZSR8/Z8/main.c:28:1: warning: ISO C forbids nested functions [-Wpedantic]
 int main()
 ^~~
/rhome/j/jhasanovic1/workspace/OR/ZSR8/Z8/main.c:28:5: warning: ‘main’ is normally a non-static function [-Wmain]
 int main()
     ^~~~
/rhome/j/jhasanovic1/workspace/OR/ZSR8/Z8/main.c:37:1: error: expected declaration or statement at end of input
 }
 ^
/rhome/j/jhasanovic1/workspace/OR/ZSR8/Z8/main.c:37:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
At top level:
/rhome/j/jhasanovic1/workspace/OR/ZSR8/Z8/main.c:28:5: warning: ‘main’ defined but not used [-Wunused-function]
 int main()
     ^~~~
